update version desc; add about content

--- a/src/modules/public-ledwax-web-ui/app/partials/about.html
+++ b/src/modules/public-ledwax-web-ui/app/partials/about.html
@@ -1,3 +1,6 @@
+<p>{{ 'LEDWax version v%VERSION%.' | appVersion }}</p>
 <p app-description></p>
-<p>Showing of 'appVersion' filter: {{ 'Current version is
-	v%VERSION%.' | appVersion }}</p>
+<p>To login use the username/password you already created on your Particle server.</p>
+<p>Setup and store LEDWax devices on the 'Setup' screen.  Devices must be already registered on the Particle cloud.</p>
+<p>Devices only need to be setup once.</p>
+<p>Once LEDWax devices are stored, they can be driven from the LEDs screen.  You can set mode, color, brightness, fade mode, and more.</p>
